--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Create backend .env
         run: |
           touch backend/.env
-          echo "MONGO_URL=${{ secrets.MONGODB_URL }}" >> ./backend/.env
+          echo "MONGODB_URL=${{ secrets.MONGODB_URL }}" >> ./backend/.env
           echo "PORT=${{ secrets.PORT }}" >> ./backend/.env
           echo "EMAIL_USER=${{ secrets.EMAIL_USER }}" >> ./backend/.env
           echo "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" >> ./backend/.env
